src/ui/snapshots/proqi__ui__app__export__tests__rendering__export_completion_standard.snap
---
source: src/ui/app/export/tests/rendering.rs
assertion_line: 87
expression: "snapshot(&mut completion_stage(), 72, 14)"
---
00││
01│  Grüß ┌ export and replace with reference ───────────────────[x]│
02│  ──── │>docs/                                                  │ ──────│
03│       │Save and replace 2 thoughts with a file reference       ││
04│⋮ seco │docs/                                                   ││
05│       │drafts/                                                 ││
06│       │design.txt                                              ││
07│       └────────────────────────────────────────────────────────┘│
08││
09││
10││
11│  project│
12│  2 thoughts · board · saved│
13│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands│
