src/ui/snapshots/proqi__ui__app__export__tests__rendering__export_path_standard.snap
---
source: src/ui/app/export/tests/rendering.rs
assertion_line: 84
expression: "snapshot(&mut path_stage(), 72, 14)"
---
00││
01│  Grüße 👩‍💻  first│
02│  ──── ┌ export and replace with reference ───────────────────[x] ──────│
03│       │>notes/Grüße.txt                                        ││
04│⋮ seco │Save and replace 2 thoughts with a file reference       ││
05│       │                                                        ││
06│       └────────────────────────────────────────────────────────┘│
07││
08││
09││
10││
11│  project│
12│  2 thoughts · board · saved│
13│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands│
