src/ui/snapshots/proqi__ui__app__export__tests__rendering__export_replace_confirmation.snap
---
source: src/ui/app/export/tests/rendering.rs
assertion_line: 88
expression: "snapshot(&mut confirm_stage(), 72, 12)"
---
00││
01│  Grüß ┌ replace existing file? ──────────────────────────────[x]│
02│  ──── │                                                        │ ──────│
03│       │› Cancel                                                ││
04│⋮ seco │  Replace Grüße.txt                                     ││
05│       └────────────────────────────────────────────────────────┘│
06│                              + New thought│
07││
08││
09│  project│
10│  2 thoughts · board · saved│
11│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands│
